--- a/pycrystallography/ebsd/bandDetectorOptions.yml
+++ b/pycrystallography/ebsd/bandDetectorOptions.yml
@@ -7,4 +7,4 @@ offset: 10
 #input_image_folder: E:\tmp\pycrystallography\tmp\kikuchi_data
 output_folder: C:\Users\kvman\PycharmProjects\pycrystallography\tmp\kikuchiMaps\out
 input_image_folder: C:\Users\kvman\PycharmProjects\pycrystallography\tmp\kikuchiMaps
-plot_results: true
+plot_results: false
